--- a/src/assets/stylesheets/components/_badges.scss
+++ b/src/assets/stylesheets/components/_badges.scss
@@ -7,7 +7,7 @@ span.badge {
   font-size: 1rem;
   line-height: $badge-height;
   height: $badge-height;
-  color: color('grey', 'darken-1');
+  color: lighten($primary-color, 5%);
   float: right;
   box-sizing: border-box;
 
